[metadata]
name = ops-middleware
summary = Openstack Operations Middleware
description-file =
    README.md
license = Apache-2
author = SAP
author-email = rudolf.vriend@sap.com
home-page = https://github.com/sapcc/openstack-ops-middleware
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    opsmiddleware

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
paste.filter_factory =
    sentry = opsmiddleware.metrics:SentryMiddleware.factory
    statsd = opsmiddleware.metrics:StatsdMiddleware.factory

[wheel]
universal = 1
